misaligned border fix

--- a/css/main.css
+++ b/css/main.css
@@ -124,7 +124,7 @@ body {
 }
 
 #email-input {
-    border: 4px solid #000;
+    border: 2px solid #000;
     height: 30px;
     display: inline;
     letter-spacing: 1px;
@@ -205,6 +205,7 @@ input[type="submit"] {
     }
 
     #email-signup {
+        border: 4px solid #000;
         display: block;
         width: 40%;
         min-width: 395px;
